setup routes and add basic but incorrect handling for getting the wikipages categories.
TODO: generate cookie for user, create User record in postgres and populate with cookie + categories, redirect to index /,
subsequent requests should check for presence of cookie and if so choose a random page in category

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,21 @@
 extends layout
 
 block content
-  iframe(
-    src="https://en.wikipedia.org/wiki/Special:Random"
-    title="Random Wikipedia Page"
-    style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"
-  )
+  h1 Happy Birthday Dad!
+  h2 Here's how this works:
+  ol
+    li Copy + paste the URL of a wikipedia page you like (e.g. https://en.wikipedia.org/wiki/Winston_Churchill)
+    li Hit "Submit" and I'll reply back with a random wikipedia page that's similar to the one you just gave me
+    li As long as you keep using this same browser and computer, I'll remember who you are and what wikipedia pages you like
+  p Enter the URL of a wikipedia page you're interested in and I'll use that to show you wikipedia pages in similar categories to the one you give me
+  br
+  br
+  
+  form(method='POST', action='/register')
+    div
+      label(for='wikisite') Wikipedia Page:
+      input(type='text', placeholder='a wikipage you like' name='wikisite')
+    br
+    div
+      input(value='Submit', type='submit')
+    br
