refactored names and error handling logic

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,11 +10,11 @@ block content
   p Enter the URL of a wikipedia page you're interested in and I'll use that to show you wikipedia pages in similar categories to the one you give me
   br
   br
-  
+
   form(method='POST', action='/register')
     div
-      label(for='wikisite') Wikipedia Page:
-      input(type='text', placeholder='a wikipage you like' name='wikisite')
+      label(for='wikitopic') Wikipedia Topic:
+      input(type='text', placeholder='Winston Churchill' name='wikitopic')
     br
     div
       input(value='Submit', type='submit')
