it works, but it is not right and it is not fast.
This commit allows a user to submit a wikipedia page and get a random wikipage related to it.
There is still much to do with storing the appropriate data, sanitizing input, and setting cookies.

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,8 +13,8 @@ block content
 
   form(method='POST', action='/register')
     div
-      label(for='wikitopic') Wikipedia Topic:
-      input(type='text', placeholder='Winston Churchill' name='wikitopic')
+      label(for='wikipage') Wikipedia Topic:
+      input(type='text', placeholder='Winston Churchill' name='wikipage')
     br
     div
       input(value='Submit', type='submit')
