--- a/views/wikipage.pug
+++ b/views/wikipage.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   iframe(
-    src="https://en.wikipedia.org/wiki/Special:Random"
-    title="Random Wikipedia Page"
+    src= url
+    title= title,
     style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"
   )
