--- a/views/wikipage.pug
+++ b/views/wikipage.pug
@@ -3,6 +3,6 @@ extends layout
 block content
   iframe(
     src= url
-    title= title,
+    title="Happy Birthday Dad!",
     style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"
   )
