improve index page wording

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,11 +4,9 @@ block content
   h1 Happy Birthday Dad!
   h2 Here's how this works:
   ol
-    li Copy + paste the URL of a wikipedia page you like (e.g. https://en.wikipedia.org/wiki/Winston_Churchill)
-    li Hit "Submit" and I'll reply back with a random wikipedia page that's similar to the one you just gave me
+    li Paste a wikipedia page that you like and it complex (e.g. "Winston_Churchill")
+    li Hit "Submit" and I'll reply back with a random wikipedia page that has something similar with the one you pasted
     li As long as you keep using this same browser and computer, I'll remember who you are and what wikipedia pages you like
-  p Enter the URL of a wikipedia page you're interested in and I'll use that to show you wikipedia pages in similar categories to the one you give me
-  br
   br
 
   form(method='POST', action='/register')
