--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   h1 Happy Birthday Dad!
   h2 Here's how this works:
   ol
-    li Paste a wikipedia page that you like and it complex (e.g. "Winston_Churchill")
+    li Paste a wikipedia page that you like and is complex (e.g. "Winston_Churchill")
     li Hit "Submit" and I'll reply back with a random wikipedia page that has something similar with the one you pasted
     li As long as you keep using this same browser and computer, I'll remember who you are and what wikipedia pages you like
   br
